# arrow

./: CMakeLists.txt  LICENSE  README.md  arrow.sublime-syntax  eightQueens.ar  queens.ar  queens.arrow
examples/: argtest.ar  balls.ar  balls2.ar  binary.ar  ca.ar  cell30.ar  conway.ar  creature.ar  creatures.ar  creatures2.ar  eightQueens.ar  factorial.ar  fib.ar  fizzbuzz.ar  fluid.ar  forest.ar  forest2.ar  forest3.ar  gen.ar  gen2.ar  lists.ar  macroLike.ar  mandelbrot.ar  reverse.ar  snake.ar  snake10.ar  snake11.ar  snake2.ar  snake3.ar  snake4.ar  snake5.ar  snake6.ar  snake7.ar  snake8.ar  snake9.ar  sudoku.ar  terrain.ar  terrain2.ar  water.ar  water2.ar  (+1 more)
examples/graphics/: README  agents.ar  agents2.ar  agents3.ar  agents4.ar  agents5.ar  balls.ar  pixels.ar
src/: ArrowStatement.hpp  ArrowlessStatement.hpp  CallStatement.hpp  ElseIfStatement.hpp  ElseStatement.hpp  Expression.hpp  ExpressionCollectionExpression.hpp  ForStatement.hpp  GrammarRule.cpp  GroupedExpression.hpp  HatHatStringExpression.hpp  HatStringExpression.hpp  IdentifierExpression.hpp  IfStatement.hpp  Lexeme.cpp  Lexeme.hpp  Lexer.cpp  Lexer.hpp  ListExpression.hpp  LiteralIntExpression.hpp  LiteralRealExpression.hpp  LiteralStringExpression.hpp  Node.hpp  OperatorExpression.hpp  Parser.cpp  Parser.hpp  QQStringExpression.hpp  QStringExpression.hpp  RepeatStatement.hpp  StartStatement.hpp  Token.hpp  WhileStatement.hpp  main.cpp
src/builtin/: ArgExpression.cpp  ArgExpression.hpp  Atan2FunctionExpression.cpp  Atan2FunctionExpression.hpp  BuiltInFunctionExpression.hpp  CosFunctionExpression.cpp  CosFunctionExpression.hpp  ExpFunctionExpression.cpp  ExpFunctionExpression.hpp  GetKeyPressExpression.cpp  GetKeyPressExpression.hpp  InitKeyHandlerFunctionExpression.cpp  InitKeyHandlerFunctionExpression.hpp  LengthExpression.cpp  LengthExpression.hpp  MapContainsFunctionExpression.cpp  MapContainsFunctionExpression.hpp  MapKeysFunctionExpression.cpp  MapKeysFunctionExpression.hpp  RandomFunctionExpression.cpp  RandomFunctionExpression.hpp  RegexFunctionExpression.cpp  RegexFunctionExpression.hpp  SinFunctionExpression.cpp  SinFunctionExpression.hpp  SqrtFunctionExpression.cpp  SqrtFunctionExpression.hpp  StringInputExpression.cpp  StringInputExpression.hpp  SystemCommandExpression.cpp  SystemCommandExpression.hpp  ToIntFunctionExpression.cpp  ToIntFunctionExpression.hpp  TokenizeFunctionExpression.cpp  TokenizeFunctionExpression.hpp  TrimStringFunctionExpression.cpp  TrimStringFunctionExpression.hpp  TypeExpression.cpp  TypeExpression.hpp  WildcardEqExpression.cpp  (+1 more)
src/evaluator/: BooleanExpressionEvaluator.cpp  BooleanExpressionEvaluator.hpp  CallStatementEvaluator.cpp  CallStatementEvaluator.hpp  Evaluator.hpp  ExpressionEvaluator.hpp  ForStatementEvaluator.cpp  ForStatementEvaluator.hpp  FunctionExpressionEvaluator.cpp  FunctionExpressionEvaluator.hpp  FunctionStatementEvaluator.cpp  FunctionStatementEvaluator.hpp  IdentifierEvaluator.cpp  IdentifierEvaluator.hpp  IfStatementEvaluator.cpp  IfStatementEvaluator.hpp  ListExpressionEvaluator.cpp  ListExpressionEvaluator.hpp  MatchesExpressionEvaluator.cpp  MatchesStatementEvaluator.cpp  MatchesStatementEvaluator.hpp  MathExpressionEvaluator.cpp  MathExpressionEvaluator.hpp  PrimitiveStatementEvaluator.cpp  PrimitiveStatementEvaluator.hpp  PutStatementEvaluator.cpp  PutStatementEvaluator.hpp  RandomFunctionExpressionEvaluator.cpp  RandomFunctionExpressionEvaluator.hpp  RepeatStatementEvaluator.cpp  RepeatStatementEvaluator.hpp  ScopedBlockStatementEvaluator.cpp  SimpleArrowStatementEvaluator.cpp  SimpleArrowStatementEvaluator.hpp  SqrtFunctionExpressionEvaluator.cpp  SqrtFunctionExpressionEvaluator.hpp  StatementEvaluator.hpp  StringInputExpressionEvaluator.cpp  StringInputExpressionEvaluator.hpp  SystemCommandExpressionEvaluator.hpp  (+2 more)
src/expressions/: BooleanExpression.cpp  BooleanExpression.hpp  BracedExpressionCollectionExpression.cpp  BracedExpressionCollectionExpression.hpp  DecayType.hpp  DoubleEqualExpression.cpp  DoubleEqualExpression.hpp  Expression.cpp  Expression.hpp  ExpressionCollectionExpression.cpp  ExpressionCollectionExpression.hpp  FunctionExpression.cpp  FunctionExpression.hpp  GroupedExpression.cpp  GroupedExpression.hpp  HatHatStringExpression.cpp  HatHatStringExpression.hpp  HatStringExpression.cpp  HatStringExpression.hpp  IdentifierExpression.cpp  IdentifierExpression.hpp  IndexExpression.cpp  IndexExpression.hpp  ListExpression.cpp  ListExpression.hpp  ListWordExpression.cpp  ListWordExpression.hpp  LiteralCharExpression.cpp  LiteralCharExpression.hpp  LiteralIntExpression.cpp  LiteralIntExpression.hpp  LiteralRealExpression.cpp  LiteralRealExpression.hpp  LiteralStringExpression.cpp  LiteralStringExpression.hpp  MatchesExpression.cpp  MatchesExpression.hpp  MathExpression.cpp  MathExpression.hpp  NegativeNumberExpression.cpp  (+17 more)
src/graphics/: DrawCircleFunctionExpression.cpp  DrawCircleFunctionExpression.hpp  DrawCircleFunctionExpressionEvaluator.cpp  DrawCircleFunctionExpressionEvaluator.hpp  DrawFunctionExpression.cpp  DrawFunctionExpression.hpp  DrawFunctionExpressionEvaluator.cpp  DrawFunctionExpressionEvaluator.hpp  DrawLineFunctionExpression.cpp  DrawLineFunctionExpression.hpp  DrawLineFunctionExpressionEvaluator.cpp  DrawLineFunctionExpressionEvaluator.hpp  DrawRectFunctionExpression.cpp  DrawRectFunctionExpression.hpp  DrawRectFunctionExpressionEvaluator.cpp  DrawRectFunctionExpressionEvaluator.hpp  FillCircleFunctionExpression.cpp  FillCircleFunctionExpression.hpp  FillCircleFunctionExpressionEvaluator.cpp  FillCircleFunctionExpressionEvaluator.hpp  FillRectFunctionExpression.cpp  FillRectFunctionExpression.hpp  FillRectFunctionExpressionEvaluator.cpp  FillRectFunctionExpressionEvaluator.hpp  GraphicsCanvas.cpp  GraphicsCanvas.hpp  GraphicsProcessFunctionExpression.cpp  GraphicsProcessFunctionExpression.hpp  GraphicsProcessFunctionExpressionEvaluator.cpp  GraphicsProcessFunctionExpressionEvaluator.hpp  InitGraphicsCanvasFunctionExpression.cpp  InitGraphicsCanvasFunctionExpression.hpp  README  (+2 more)
tests/: test.ar  test.arr
(+254 files in other folders)
